# dremio-mcp

./: .env  .env.local  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  ENTERPRISE_ANALYTICS.md  Makefile  README.md  cumulocity.json  pyproject.toml  pytest.ini  release-please-config.json
.github/workflows/: build-deploy-microservice.yml  checkstyle.yaml  clean-images.yml  docker.yaml  pytest.yml  release-please.yml
docs/: settings.md  stateless-http-memory-leak-blog-post.md  upstream-stateless-http-fix-summary.md  upstream-stateless-http-issue.md
dremioai/servers/: mcp.py
examples/: bedrock-integration.md  chatgpt-integration.md
helm/dremio-mcp/: AUTHENTICATION.md  Chart.yaml  QUICKSTART.md  README.md  test-chart.sh  values.yaml
patches/: 0001-fix-stateless-streamable-http-task-lifecycle.patch  series
scripts/: generate_flag_keys.py
src/dremioai/: log.py  mcp_test.py
tests/: conftest.py  launchdarkly_manual_test.py  stremable_http_cli.py  test_chart.py  test_fastmcp_basic.py  test_http_mock_framework.py  test_log.py  test_mcp_e2e.py  test_simple_fastmcp_server.py
tests/api/: test_basic_auth.py  test_transport_retry.py
tests/config/: golden_flag_keys.yaml  test_launchdarkly_integration.py  test_settings.py
tests/e2e/: test_auth_401_passthrough.py  test_e2e_pat.py  test_launchdarkly_e2e.py  test_mcp_e2e.py  test_metrics_e2e.py  test_runsql_large_e2e.py  test_runsql_soak_e2e.py  test_runsql_transport_referrers.py  test_runsql_transport_retention_repro.py  test_stateless_mcp_standalone_repro.py
tests/mocks/: http_mock.py
(+76 files in other folders)
