[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dremioai"
version = "0.1.0"
description = "Foundation for llm integration with Dremio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.4",
    "black>=26.3.1",
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "launchdarkly-server-sdk>=9.15.0",
    "mcp==1.10.0",
    "multidict>=6.4.0",
    "openai>=1.65.3",
    "pandas>=2.2.3",
    "pandas-stubs==2.3.0.250703",
    "prometheus-client>=0.22.1",
    "prompt-toolkit>=3.0.50",
    "pydantic>=2.10.6",
    "PyJWT[crypto]>=2.8.0",
    "pydantic-settings>=2.8.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pyyaml>=6.0.2",
    "requests>=2.33.0",
    "rich>=13.9.4",
    "sqlglot>=26.23.0",
    "starlette>=0.49.1",
    "structlog>=25.1.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
    # Transitive dependency lower bounds pinned for security fixes
    "h11>=0.16.0",
    "python-multipart>=0.0.26",
    "orjson>=3.11.6",
    "setuptools>=78.1.1",
    "urllib3>=2.6.3",
    "cryptography>=46.0.7",
    "filelock>=3.20.3",
    "python-dotenv>=1.2.2",
    "pygments>=2.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dremioai*"]

[project.scripts]
dremio-mcp-server = "dremioai.servers.mcp:cli"
